feat: add more config options